finish home screen tabs and design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#fdd835</color>
     <color name="colorPrimaryLight">#ffff6b</color>
     <color name="colorPrimaryDark">#c6a700</color>
+    <color name="windowBackgroundColor">#fffde7</color>
     <color name="colorAccent">#5d4037</color>
 </resources>
