--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
+    <dimen name="minimum_margin">8dp</dimen>
     <dimen name="default_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 </resources>
