--- a/app/src/main/res/layout/fragment_feed_screen.xml
+++ b/app/src/main/res/layout/fragment_feed_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeScreenActivityFragment"
-    tools:showIn="@layout/activity_home_screen">
+    tools:context=".HomeScreenActivitySearchFragment">
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
