--- a/app/src/main/res/layout/fragment_searchresult_list.xml
+++ b/app/src/main/res/layout/fragment_searchresult_list.xml
@@ -9,5 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".SearchResultFragment"
+    tools:context=".search.SearchResultFragment"
     tools:listitem="@layout/fragment_searchresult_entry" />
