--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -30,6 +30,7 @@
 
 
             <androidx.cardview.widget.CardView
+                android:transitionName="search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
